--- a/test/LaTeXAndHTML/succeed/IndentingContainer.quick.tex
+++ b/test/LaTeXAndHTML/succeed/IndentingContainer.quick.tex
@@ -23,7 +23,7 @@
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
 \AgdaInductiveConstructor{\_,\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
@@ -31,7 +31,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{proj₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -45,8 +45,8 @@
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaFunction{uncurry}%
-\>[20I]\AgdaSymbol{:}%
+\>[0]\AgdaFunction{uncurry}\AgdaSpace{}%
+\AgdaSymbol{:}%
 \>[21I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -64,7 +64,7 @@
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[20I][@{}l@{\AgdaIndent{0}}]\<[21I]%
+\>[.]\<[21I]%
 \>[10]\AgdaSymbol{((}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
@@ -80,7 +80,7 @@
 \AgdaBound{y}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[20I][@{}l@{\AgdaIndent{0}}]%
+%
 \>[10]\AgdaSymbol{((}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{Sigma}\AgdaSpace{}%
@@ -112,7 +112,7 @@
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
 \AgdaInductiveConstructor{\_◃\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
@@ -120,7 +120,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{Arity}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Parameter}\AgdaSpace{}%
