--- a/test/LaTeXAndHTML/succeed/Issue1062.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1062.tex
@@ -48,7 +48,7 @@
 \AgdaDatatype{List}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaInductiveConstructor{\_∷\_}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
@@ -78,7 +78,7 @@
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
 \AgdaInductiveConstructor{\_,\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
@@ -86,7 +86,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{snd}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{B}\<%
@@ -117,7 +117,7 @@
 \AgdaKeyword{constructor}\AgdaSpace{}%
 \AgdaCoinductiveConstructor{\_∷\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
@@ -125,7 +125,7 @@
 \>[10]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{tail}%
 \>[10]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -239,7 +239,7 @@
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
 \AgdaInductiveConstructor{\_∷\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
@@ -247,7 +247,7 @@
 \>[10]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{tail}%
 \>[10]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{List}\AgdaSpace{}%
@@ -318,7 +318,7 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -346,8 +346,8 @@
 \>[0]\AgdaField{tail}%
 \>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}\AgdaSpace{}%
 \AgdaBound{step}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}%
-\>[193I]\AgdaSymbol{=}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}%
 \>[26]\AgdaKeyword{let}%
 \>[31]\AgdaSymbol{((\_}\AgdaSpace{}%
 \AgdaInductiveConstructor{∷}\AgdaSpace{}%
@@ -358,7 +358,7 @@
 \AgdaBound{step}\AgdaSpace{}%
 \AgdaBound{s}\<%
 \\
-\>[193I][@{}l@{\AgdaIndent{0}}]%
+%
 \>[26]\AgdaKeyword{in}%
 \>[31]\AgdaBound{l}\AgdaSpace{}%
 \AgdaFunction{++ˢ}\AgdaSpace{}%
