--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
@@ -24,7 +24,7 @@
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Bool}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaInductiveConstructor{false}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Bool}\<%
@@ -76,7 +76,7 @@
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaInductiveConstructor{suc}%
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\AgdaSpace{}%
@@ -185,7 +185,7 @@
 \>[7]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{g}%
 \>[7]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
@@ -210,12 +210,12 @@
 \>[7]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{j}%
 \>[7]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{r}%
 \>[7]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{R}\<%
@@ -239,7 +239,7 @@
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaFunction{r′}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{record}\<%
@@ -250,34 +250,34 @@
 \>[9]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{j}%
 \>[9]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{;}%
-\>[109I]\AgdaField{r}%
+%
+\>[4]\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaField{r}%
 \>[110I]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{record}\<%
 \\
-\>[109I][@{}l@{\AgdaIndent{0}}]\<[110I]%
+\>[.]\<[110I]%
 \>[8]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{f}%
 \>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
-\>[109I][@{}l@{\AgdaIndent{0}}]%
+%
 \>[8]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{g}%
 \>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
-\>[109I][@{}l@{\AgdaIndent{0}}]%
+%
 \>[8]\AgdaSymbol{\}}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaSymbol{\}}\<%
 \end{code}
 
