--- a/test/LaTeXAndHTML/succeed/Multiline.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Multiline.quick.tex
@@ -12,11 +12,11 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPostulate{String}\<%
 \\
-\>[0]\AgdaFunction{argh}%
-\>[4I]\AgdaSymbol{=}%
+\>[0]\AgdaFunction{argh}\AgdaSpace{}%
+\AgdaSymbol{=}%
 \>[8]\AgdaString{"Hello,\textbackslash{}}\<%
 \\
-\>[4I][@{}l@{\AgdaIndent{0}}]%
+%
 \>[8]\AgdaString{\textbackslash{}World!"}\<%
 \end{code}
 \end{document}
