--- a/test/LaTeXAndHTML/succeed/Issue982.tex
+++ b/test/LaTeXAndHTML/succeed/Issue982.tex
@@ -53,7 +53,7 @@
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
 \AgdaInductiveConstructor{\_,\_}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
@@ -61,7 +61,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+%
 \>[4]\AgdaField{proj₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -75,8 +75,8 @@
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaFunction{uncurry}%
-\>[20I]\AgdaSymbol{:}%
+\>[0]\AgdaFunction{uncurry}\AgdaSpace{}%
+\AgdaSymbol{:}%
 \>[21I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -94,7 +94,7 @@
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[20I][@{}l@{\AgdaIndent{0}}]\<[21I]%
+\>[.]\<[21I]%
 \>[10]\AgdaSymbol{((}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
@@ -110,7 +110,7 @@
 \AgdaBound{y}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[20I][@{}l@{\AgdaIndent{0}}]%
+%
 \>[10]\AgdaSymbol{((}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{Sigma}\AgdaSpace{}%
