--- a/test/LaTeXAndHTML/succeed/Options.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Options.quick.tex
@@ -5,11 +5,11 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaSymbol{\{{-}\#}%
-\>[0I]\AgdaKeyword{OPTIONS}%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{OPTIONS}%
 \>[13]\AgdaOption{{-}{-}no{-}positivity{-}check}\<%
 \\
-\>[0I][@{}l@{\AgdaIndent{0}}]%
+%
 \>[13]\AgdaOption{{-}{-}no{-}termination{-}check}\AgdaSpace{}%
 \AgdaSymbol{\#{-}\}}\<%
 \end{code}
