--- a/test/LaTeXAndHTML/succeed/Relative-indentation.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.tex
@@ -41,7 +41,7 @@
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
+%
 \>[2]\AgdaPostulate{I}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
@@ -100,7 +100,7 @@ text \begin{code}%
 \end{code} text again
 
  text          \begin{code}%
-\>[0][@{}l@{\AgdaIndent{2}}]%
+%
 \>[4]\AgdaKeyword{postulate}\AgdaSpace{}%
 \AgdaPostulate{o}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -132,11 +132,11 @@ text \begin{code}%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[29I]\AgdaModule{\_}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{\_}%
 \>[30I]\AgdaKeyword{where}\<%
 \\
-\>[29I][@{}l@{\AgdaIndent{0}}]\<[30I]%
+\>[.]\<[30I]%
 \>[9]\AgdaKeyword{postulate}\<%
 \\
 \>[9][@{}l@{\AgdaIndent{0}}]%
@@ -158,7 +158,7 @@ text \begin{code}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[35I]%
+\>[.]\<[35I]%
 \>[12]\AgdaPostulate{U}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
@@ -178,7 +178,7 @@ text \begin{code}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]\<[42I]%
+\>[.]\<[42I]%
 \>[12]\AgdaPostulate{W}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
@@ -193,7 +193,7 @@ text \begin{code}%
 \>[0]\AgdaFunction{X}%
 \>[49I]\AgdaSymbol{=}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[49I]%
+\>[.]\<[49I]%
 \>[2]\AgdaPrimitiveType{Set}\<%
 \end{code}
 
@@ -217,7 +217,7 @@ text \begin{code}%
 \>[0]\AgdaFunction{Zzzzzzzzz}%
 \>[57I]\AgdaBound{X}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]\<[57I]%
+\>[.]\<[57I]%
 \>[10]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{X}\<%
 \end{code}
