[ #2744, #2453 ] Added support for \begin{code}[hide].
This fixes #2744, and it provides a partial fix for #2453.

--- a/src/data/agda.sty
+++ b/src/data/agda.sty
@@ -5,7 +5,7 @@
 \ProvidesPackage{agda}
 
 \RequirePackage{ifxetex, ifluatex, xifthen, xcolor, polytable, etoolbox,
-                calc}
+                calc, environ}
 
 % https://tex.stackexchange.com/questions/47576/combining-ifxetex-and-ifluatex-with-the-logical-or-operation
 \newif\ifxetexorluatex
@@ -384,9 +384,14 @@
 \newcommand{\AgdaError}             [1]
     {\AgdaFontStyle{\textcolor{AgdaError}{\underline{#1}}}}
 
+% Used to hide code from LaTeX.
+%
+% Note that this macro has been deprecated in favour of giving the
+% hide argument to the code environment.
+\long\def\AgdaHide#1{\ignorespaces}
+
 % Misc.
 \newcommand{\AgdaHole}[1]{\colorbox{AgdaHole}{#1}}
-\long\def\AgdaHide#1{\ignorespaces} % Used to hide code from LaTeX.
 
 % ----------------------------------------------------------------------
 % The code environment.
@@ -447,10 +452,9 @@
 %   \begin{code}
 %     visible
 %   \end{code}
-%   \AgdaHide{
-%   \begin{code}
+%   \begin{code}[hide]
 %     hidden
-%   \end{code}}
+%   \end{code}
 %   \begin{code}
 %     visible
 %   \end{code}
@@ -477,10 +481,9 @@
 %     aligned with "code"
 %       aligned with "more code"
 %   \end{code}
-%   \AgdaHide{
-%   \begin{code}
+%   \begin{code}[hide]
 %     hidden code
-%   \end{code}}
+%   \end{code}
 %   \begin{code}
 %       also aligned with "more code"
 %   \end{code}
@@ -549,32 +552,35 @@
 
 % The code environment.
 %
+% Code can be hidden by writing \begin{code}[hide].
+%
 % The implementation is based on plainhscode in lhs2TeX's
 % polycode.fmt, written by Andres Löh.
-\newenvironment{code}{%
-  \ifthenelse{\value{Agda@SpaceAroundCode} = 0 \or%
-              \not \(\value{Agda@Suppress} = 0 \or%
-                     \value{Agda@SuppressCurrent} = 1\)}{%
-    \AgdaNewlineWithVerticalSpace{0pt}}{%
-    \AgdaNewlineWithVerticalSpace{\abovedisplayskip}}%
-  \advance\leftskip\mathindent%
-  \AgdaCodeStyle%
-  \setlength{\AgdaEmptyExtraSkip}{\AgdaEmptySkip - \baselineskip}%
-  \pboxed%
-  \ifthenelse{\value{Agda@Align} = 0}{}{%
-    \ifthenelse{\value{Agda@AlignCurrent} = 1}{%
-      \savecolumns}{%
-      \restorecolumns}}}{%
-  \endpboxed%
-  \ifthenelse{\value{Agda@SpaceAroundCode} = 0 \or%
-              \not \(\value{Agda@Suppress} = 0 \or%
-                     \value{Agda@SuppressCurrent} =%
-                     \value{Agda@SuppressLast}\)}{%
-    \AgdaNewlineWithVerticalSpace{0pt}}{%
-    \AgdaNewlineWithVerticalSpace{\belowdisplayskip}}%
-  \stepcounter{Agda@AlignCurrent}%
-  \stepcounter{Agda@SuppressCurrent}%
-  \ignorespacesafterend}
+\NewEnviron{code}[1][]{%
+  \ifthenelse{\equal{#1}{hide}}{}{%
+    \ifthenelse{\value{Agda@SpaceAroundCode} = 0 \or%
+                \not \(\value{Agda@Suppress} = 0 \or%
+                       \value{Agda@SuppressCurrent} = 1\)}{%
+      \AgdaNewlineWithVerticalSpace{0pt}}{%
+      \AgdaNewlineWithVerticalSpace{\abovedisplayskip}}%
+    \advance\leftskip\mathindent%
+    \AgdaCodeStyle%
+    \setlength{\AgdaEmptyExtraSkip}{\AgdaEmptySkip - \baselineskip}%
+    \begin{pboxed}%
+      \ifthenelse{\value{Agda@Align} = 0}{}{%
+        \ifthenelse{\value{Agda@AlignCurrent} = 1}{%
+          \savecolumns}{%
+          \restorecolumns}}%
+      \BODY%
+    \end{pboxed}%
+    \ifthenelse{\value{Agda@SpaceAroundCode} = 0 \or%
+                \not \(\value{Agda@Suppress} = 0 \or%
+                       \value{Agda@SuppressCurrent} =%
+                       \value{Agda@SuppressLast}\)}{%
+      \AgdaNewlineWithVerticalSpace{0pt}}{%
+      \AgdaNewlineWithVerticalSpace{\belowdisplayskip}}%
+    \stepcounter{Agda@AlignCurrent}%
+    \stepcounter{Agda@SuppressCurrent}}}
 
 % Space inserted after tokens.
 \newcommand{\AgdaSpace}{ }
