--- a/test/LaTeXAndHTML/succeed/Issue2400-2.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2400-2.quick.tex
@@ -1,9 +1,3 @@
-\documentclass{article}
+AGDA_COMPILE_FAILED
 
-\usepackage{agda}
-
-\begin{document}
-
-\begin{code} text \end{code}
-
-\end{document}
+ret > ExitFailure 1 out > /test/LaTeXAndHTML/succeed/Issue2400-2.lagda:10,1-1 out > /test/LaTeXAndHTML/succeed/Issue2400-2.lagda:10,1: Missing body for lambda out > <EOF><ERROR> out > ... out >
