--- a/test/LaTeXAndHTML/succeed/Issue2453.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2453.tex
@@ -1,10 +1,3 @@
-\nonstopmode
-\documentclass{article}
+AGDA_COMPILE_FAILED
 
-\usepackage{agda}
-
-\begin{document}
-
-\begin{code} this is not valid agda code \end{code}
-
-\end{document}
+ret > ExitFailure 1 out > /test/LaTeXAndHTML/succeed/Issue2453.lagda:11,1-1 out > /test/LaTeXAndHTML/succeed/Issue2453.lagda:11,1: Missing body for lambda out > <EOF><ERROR> out > ... out >
