--- a/test/LaTeXAndHTML/succeed/Issue2623.lagda.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2623.lagda.tex
@@ -15,7 +15,7 @@
     postulate A : Set
 \end{code}
 More text.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}
   mutual
 \end{code}
