--- a/test/LaTeXAndHTML/succeed/Issue2744.lagda.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2744.lagda.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 \noindent Before.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}[hide]
   postulate
 \end{code}
@@ -40,7 +40,7 @@ After.
     F : Set
 \end{code}
 In between.
-\begin{AgdaSuppressSpace}{2}
+\begin{AgdaSuppressSpace}
 \begin{code}
   postulate
     G : Set
@@ -56,7 +56,7 @@ In between.
 After.
 
 \noindent Before.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}
   postulate
     !_!    : Set → Set
