--- a/test/LaTeXAndHTML/succeed/Issue2744.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2744.quick.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 \noindent Before.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}[hide]%
 %
 \>[2]\AgdaKeyword{postulate}\<%
@@ -63,7 +63,7 @@ After.
 \AgdaPrimitiveType{Set}\<%
 \end{code}
 In between.
-\begin{AgdaSuppressSpace}{2}
+\begin{AgdaSuppressSpace}
 \begin{code}%
 %
 \>[2]\AgdaKeyword{postulate}\<%
@@ -88,7 +88,7 @@ In between.
 After.
 
 \noindent Before.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}%
 %
 \>[2]\AgdaKeyword{postulate}\<%
