--- a/test/LaTeXAndHTML/succeed/NestedAgdaMultiCode.lagda.tex
+++ b/test/LaTeXAndHTML/succeed/NestedAgdaMultiCode.lagda.tex
@@ -4,8 +4,8 @@
 
 \begin{document}
 
-\begin{AgdaMultiCode}{0}
-\begin{AgdaMultiCode}{0}
+\begin{AgdaMultiCode}
+\begin{AgdaMultiCode}
 \end{AgdaMultiCode}
 \end{AgdaMultiCode}
 
