--- a/test/LaTeXAndHTML/succeed/Relative-indentation.lagda.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.lagda.tex
@@ -24,7 +24,7 @@ postulate
       J : Set
 \end{code}
 
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}
 postulate
   K  L
@@ -73,7 +73,7 @@ module _ where
           S : Set
 \end{code}
 
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}
 module _ where
 \end{code}
@@ -83,7 +83,7 @@ module _ where
 \end{code}
 \end{AgdaMultiCode}
 
-\begin{AgdaSuppressSpace}{2}
+\begin{AgdaSuppressSpace}
 \begin{code}
 module _ where
 \end{code}
