--- a/test/LaTeXAndHTML/succeed/Relative-indentation.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.quick.tex
@@ -50,7 +50,7 @@
 \AgdaPrimitiveType{Set}\<%
 \end{code}
 
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
@@ -145,7 +145,7 @@ text \begin{code}        %
 \AgdaPrimitiveType{Set}\<%
 \end{code}
 
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{\_}\AgdaSpace{}%
@@ -165,7 +165,7 @@ text \begin{code}        %
 \end{code}
 \end{AgdaMultiCode}
 
-\begin{AgdaSuppressSpace}{2}
+\begin{AgdaSuppressSpace}
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{\_}\AgdaSpace{}%
