--- a/test/LaTeXAndHTML/succeed/Issue2623.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2623.tex
@@ -20,7 +20,7 @@
 \AgdaPrimitiveType{Set}\<%
 \end{code}
 More text.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 \begin{code}%
 %
 \>[2]\AgdaKeyword{mutual}\<%
