--- a/test/LaTeXAndHTML/succeed/NestedAgdaSuppressSpace.lagda.tex
+++ b/test/LaTeXAndHTML/succeed/NestedAgdaSuppressSpace.lagda.tex
@@ -4,8 +4,8 @@
 
 \begin{document}
 
-\begin{AgdaSuppressSpace}{0}
-\begin{AgdaSuppressSpace}{0}
+\begin{AgdaSuppressSpace}
+\begin{AgdaSuppressSpace}
 \end{AgdaSuppressSpace}
 \end{AgdaSuppressSpace}
 
